AbstractAnimal reworked